fix the form on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1338,4 +1338,8 @@ ul.social-icons li {
   background: #ff5b4b;
 }
 
+#sign-up .embed-responsive .embed-responsive-item {
+  height: 120% !important;
+}
+
 /*# sourceMappingURL=maps/style.css.map */
